// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Option /> should render with correct name and value 1`] = `
<div
  class="text-tsm text-onSurface hover:bg-primaryVariant w-full cursor-pointer py-2 px-3 font-light transition-colors bg-surface"
  data-value="actualValue"
  role="option"
>
  children
</div>
`;

exports[`<Option /> should render with fallback value 1`] = `
<div
  class="text-tsm text-onSurface hover:bg-primaryVariant w-full cursor-pointer py-2 px-3 font-light transition-colors bg-surface"
  data-value="children"
  role="option"
>
  children
</div>
`;

exports[`<Option /> should render with highlighted style 1`] = `
<div
  class="text-tsm text-onSurface hover:bg-primaryVariant w-full cursor-pointer py-2 px-3 font-light transition-colors bg-primaryVariant"
  data-value="children"
  role="option"
>
  children
</div>
`;
